# cuno

./: .env.template  .gitignore  AndroidManifest.xml  CMakeLists.txt  CMakePresets.json  DOC.md  Makefile  README.md  readme.md  termux.toolchain.cmake  todo.md
debug/: CMakeLists.txt  main_headless.c
debug/src/: main_headless.c
game/: CMakeLists.txt
game/src/: cli.c  component.c  component.h  coord_util.h  entsys.h  game.c  game.h  game_logic.c  game_logic.h  game_math.c  game_math.h  gmath.c  gmath.h  gui.c  gui.h  logic.c  logic.h  main.c  main.h  object.h  utils.c  utils.h
game/src/system/: asset_defs.h  asset_management.h  graphic.h  log.h  log_stdio.c  logging.h  noasset.c  time.h
game/src/system/graphic/: egl.c  egl_init.c  glres.h  glutil.h  graphic.h  matrix.c  matrix.h  nographic.c  text.c  text.h
include/platform/: logging.h
platform/android/: .env.template  CMakeLists.txt  apk.cmake  apk.mk  install_apk_termux.sh  settings.gradle  wrap.sh
platform/android/app/: AndroidManifest.xml  assets  build.gradle
platform/android/app/res/values/: strings.xml
platform/android/app/src/main/java/com/sceneak/cunoandr/: CunoGameActivity.java
platform/android/app_template/: AndroidManifest.xml
platform/android/src/: asset_andr.c  asset_management_andr.c  asset_management_andr.h  assetandr.c  cunoandr.c  graphic.c  log_andr.c  main_andr.c
scripts/: adbug.sh  andr_smuggle_asan.sh  debug_keypairgen.sh  inst_run_apk.sh  install_apk_termux.sh  testlistener.sh
src/: CMakeLists.txt  main.c
src/engine/: CMakeLists.txt  alias.h  array_list.c  array_list.h  component.c  component.h  game.h  math.c  math.h  text.c  text.h  utils.h
src/engine/entity/: control.h  dot.h  keyboard.h  world.h
src/engine/entry/: main_andr.c
src/engine/system/: asset.h  graphic.h  log.h  network.h  network_packer.h  time.h
src/engine/system/asset/: asset_andr.c  asset_andr.h  asset_stdio.c
src/engine/system/graphic/: egl.c  glres.h  glutil.h  graphic_none.c
src/engine/system/log/: log_andr.c  log_stdio.c
src/engine/system/network/: network_posix.c
src/engine/system/time/: time_posix.c
src/game/: CMakeLists.txt  cli.c  gui.c  logic.c  logic.h  serialize.h  server.c  server.h
